[package]
name = "concurrency-exercise-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
futures = "0.3"
async-trait = "0.1"

thiserror = "1"
derive_more =  "0.99.0"

rand = "0.8"
